fdo#48335 RTF export: don't try to end not started runs

Change-Id: I022556acd0891cf24963d667d34f366496453630